--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,7 +1,10 @@
-push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+name: Docker Image CI
+
+on:
+    push:
+        branches: [ master ]
+    pull_request:
+        branches: [ master ]
 
 jobs:
 
